# sketches-112022

./: .gitignore  Cargo.toml
src/: a.rs  b.rs  c.rs  common.rs  d.rs  e.rs  lib.rs  main.rs
src/draw/: main.rs
src/drawsome/: main.rs
