[package]
name = "sketches"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.4"
cairo-rs = {version = "0.16", features = ["png", "svg", "pdf"]}
chrono = "0.4"
clap = {version = "4.0", features = ["derive"]}
memmap = "0.7"
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1.0", features = ["derive"] }
tinytemplate = "1.2"
